--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -8,8 +8,8 @@
 <?import javafx.scene.text.*?>
 <VBox xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.zhazhapan.qiniu.controller.MainWindowController">
-    <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0"
-                prefWidth="700.0" VBox.vgrow="ALWAYS">
+    <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="540.0"
+                prefWidth="750.0" VBox.vgrow="ALWAYS">
         <center>
             <TabPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="50.0"
                      prefWidth="700.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
@@ -41,6 +41,10 @@
                                 <ComboBox fx:id="filePrefixCombo" editable="true" maxHeight="1.7976931348623157E308"
                                           maxWidth="1.7976931348623157E308" prefHeight="35.0" prefWidth="277.0"
                                           promptText="文件前缀, 不设置则为空" VBox.vgrow="NEVER"/>
+
+                                <ComboBox fx:id="clipboardSwitch" editable="true" onAction="#changeClipboardSwitch" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="35.0" prefWidth="277.0" promptText="剪切板开关, 为空则为开" VBox.vgrow="NEVER" />
+
+                                <ComboBox fx:id="markdownSwitch" editable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="35.0" prefWidth="277.0" promptText="" VBox.vgrow="NEVER" />
                                 <TextArea fx:id="selectedFileTextArea" maxHeight="1.7976931348623157E308"
                                           maxWidth="1.7976931348623157E308" onDragDropped="#dragFileDropped"
                                           onDragOver="#dragFileOver" prefHeight="800.0" prefWidth="332.0"
@@ -279,7 +283,7 @@
                         </AreaChart>
                     </VBox>
                 </Tab>
-                <Tab text="关于作者">
+                <Tab text="版本说明">
                     <HBox>
                         <opaqueInsets>
                             <Insets/>
@@ -296,33 +300,12 @@
                                         <Insets top="10.0"/>
                                     </VBox.margin>
                                 </Label>
-                                <HBox prefHeight="47.0" prefWidth="553.0">
-                                    <VBox.margin>
-                                        <Insets bottom="-10.0" top="10.0"/>
-                                    </VBox.margin>
-                                    <Label text="QQ: ">
-                                        <font>
-                                            <Font size="20.0"/>
-                                        </font>
-                                        <HBox.margin>
-                                            <Insets top="10.0"/>
-                                        </HBox.margin>
-                                    </Label>
-                                    <TextField editable="false" style="-fx-background-color: transparent;"
-                                               text="735817834">
-                                        <HBox.margin>
-                                            <Insets top="3.0"/>
-                                        </HBox.margin>
-                                        <font>
-                                            <Font size="20.0"/>
-                                        </font>
-                                    </TextField>
-                                </HBox>
+
                                 <HBox prefHeight="47.0" prefWidth="553.0">
                                     <VBox.margin>
                                         <Insets top="10.0"/>
                                     </VBox.margin>
-                                    <Label text="CSDN博客: ">
+                                    <Label text="博客: ">
                                         <font>
                                             <Font size="20.0"/>
                                         </font>
@@ -330,7 +313,7 @@
                                             <Insets top="10.0"/>
                                         </HBox.margin>
                                     </Label>
-                                    <Hyperlink fx:id="toCsdnBlog" text="http://csdn.zhazhapan.com" underline="true">
+                                    <Hyperlink fx:id="toCsdnBlog" text="http://blog.xzc.fun" underline="true">
                                         <font>
                                             <Font size="20.0"/>
                                         </font>
@@ -339,8 +322,12 @@
                                         </HBox.margin>
                                     </Hyperlink>
                                 </HBox>
+
                                 <HBox prefHeight="47.0" prefWidth="553.0">
-                                    <Label text="HEXO博客: ">
+                                    <VBox.margin>
+                                        <Insets top="10.0"/>
+                                    </VBox.margin>
+                                    <Label text="七牛: ">
                                         <font>
                                             <Font size="20.0"/>
                                         </font>
@@ -348,7 +335,7 @@
                                             <Insets top="10.0"/>
                                         </HBox.margin>
                                     </Label>
-                                    <Hyperlink fx:id="toHexoBlog" text="http://zhazhapan.com" underline="true">
+                                    <Hyperlink fx:id="toQiniu" text="https://portal.qiniu.com/bucket/image/resource" underline="true">
                                         <font>
                                             <Font size="20.0"/>
                                         </font>
@@ -357,86 +344,7 @@
                                         </HBox.margin>
                                     </Hyperlink>
                                 </HBox>
-                                <HBox prefHeight="47.0" prefWidth="553.0">
-                                    <Label text="项目源码地址: ">
-                                        <font>
-                                            <Font size="20.0"/>
-                                        </font>
-                                        <HBox.margin>
-                                            <Insets top="10.0"/>
-                                        </HBox.margin>
-                                    </Label>
-                                    <Hyperlink fx:id="toGithubSource" text="https://github.com/zhazhapan/qiniu"
-                                               underline="true">
-                                        <font>
-                                            <Font size="20.0"/>
-                                        </font>
-                                        <HBox.margin>
-                                            <Insets top="3.0"/>
-                                        </HBox.margin>
-                                    </Hyperlink>
-                                </HBox>
-                                <HBox prefHeight="47.0" prefWidth="553.0">
-                                    <Label text="功能介绍: " HBox.hgrow="NEVER">
-                                        <font>
-                                            <Font size="20.0"/>
-                                        </font>
-                                        <HBox.margin>
-                                            <Insets top="10.0"/>
-                                        </HBox.margin>
-                                    </Label>
-                                    <Hyperlink fx:id="toIntro" prefHeight="36.0" prefWidth="526.0"
-                                               text="http://zhazhapan.com/2017/10/15/%E4%B8%83%E7%89%9B%E4%BA%91%E2%80%94%E2%80%94%E5%AF%B9%E8%B1%A1%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86%E5%B7%A5%E5%85%B7%E4%BB%8B%E7%BB%8D/"
-                                               underline="true">
-                                        <font>
-                                            <Font size="20.0"/>
-                                        </font>
-                                        <HBox.margin>
-                                            <Insets top="3.0"/>
-                                        </HBox.margin>
-                                    </Hyperlink>
-                                </HBox>
-                                <HBox prefHeight="47.0" prefWidth="553.0">
-                                    <Hyperlink fx:id="toIntro1" prefHeight="36.0" prefWidth="526.0"
-                                               text="http://blog.csdn.net/qq_26954773/article/details/78245100"
-                                               underline="true">
-                                        <font>
-                                            <Font size="20.0"/>
-                                        </font>
-                                        <HBox.margin>
-                                            <Insets left="90.0" top="3.0"/>
-                                        </HBox.margin>
-                                    </Hyperlink>
-                                </HBox>
-                                <HBox prefHeight="47.0" prefWidth="553.0">
-                                    <Label text="邮箱: " HBox.hgrow="NEVER">
-                                        <font>
-                                            <Font size="20.0"/>
-                                        </font>
-                                        <HBox.margin>
-                                            <Insets top="10.0"/>
-                                        </HBox.margin>
-                                    </Label>
-                                    <TextField editable="false" prefHeight="40.0" prefWidth="247.0"
-                                               style="-fx-background-color: transparent;" text="tao@zhazhapan.com">
-                                        <font>
-                                            <Font size="20.0"/>
-                                        </font>
-                                        <HBox.margin>
-                                            <Insets top="3.0"/>
-                                        </HBox.margin>
-                                    </TextField>
-                                    <TextField editable="false" prefHeight="40.0" prefWidth="301.0"
-                                               style="-fx-background-color: transparent;"
-                                               text="panther.pantao@gmail.com">
-                                        <font>
-                                            <Font size="20.0"/>
-                                        </font>
-                                        <HBox.margin>
-                                            <Insets top="3.0"/>
-                                        </HBox.margin>
-                                    </TextField>
-                                </HBox>
+
                             </VBox>
                         </VBox>
                     </HBox>
